[package]
name = "hyperbacked"
version = "0.1.0"
edition = "2021"
authors = ["Twometer"]

[dependencies]
lazy_static = "1.4"
anyhow = "1.0"
pbkdf2 = { version = "0.11", features = ["std"] }
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.8"
base64 = "0.20"
bytes = "1.3"
sharks = "0.5"
qrcode-generator = "4.1"
genpdf = { version = "0.2", features = ["images"] }
image = "0.23"